@@ -1,3 +1,12 @@
+Mon Oct  4 10:35:02 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/Request_Context_Repository.h:
+        * tao/Remote_Invocation.h:
+          Fixed typo
+
+        * tao/ORB_Core.cpp:
+          Use true instead of 1
+
 Fri Oct  1 16:00:51 UTC 2010  William Otte  <wotte@zifnab>
 
         * COPYING:
